# live-streamer

./: Makefile.in  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  main.cpp
src/common/: Makefile.am  Makefile.in  video-encoder.cpp  video-encoder.h
src/dbus/: Makefile.am  Makefile.in  dbus-video-encoder.cpp  dbus-video-encoder.h
src/platform/hi3518v200/: Makefile.am  Makefile.in  himpp-media.cpp  himpp-video-venc.cpp  himpp-video-venc.h  himpp-video-vpss.cpp
